--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
   <body>
     <div class="container">
-      <%= render 'layouts/flash_tasks' %>
+      <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
+    </div>
   </body>
 </html>
