--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,5 +4,5 @@
   <% @tasks.each do |task| %>
     <li><%= link_to task.id, task %> : <%= task.content %></li>
   <% end %>
-  <%= link_to '新規タスクの登録', new_task_path %>
+  <li><%= link_to '新規タスクの登録', new_task_path %></li>
 </ul>
